# Canvas-os

./: .gitignore  AUDIT.md  CLAUDE.md  README.md
bridge/: canvasos-engine.podspec  package.json
bridge/android/: CMakeLists.txt  build.gradle
bridge/android/src/main/: AndroidManifest.xml
bridge/android/src/main/java/com/canvasos/engine/: CanvasOSEngineModule.java  CanvasOSEnginePackage.java
bridge/cpp/: CanvasOSEngineTurbo.cpp  CanvasOSEngineTurbo.h  OnLoad.cpp  QueryDispatcher.cpp  QueryDispatcher.h
bridge/src/: NativeCanvasOSEngine.ts  index.ts  runtime.ts
engine/: .gitignore  Makefile
engine/include/: canvas_determinism.h  canvas_gpu.h  canvas_multiverse.h  canvasos.h  canvasos_bh.h  canvasos_json.h  canvasos_ruletable.h  canvasos_sched.h  canvasos_types.h  canvasos_wh.h
engine/src/: active_set.c  blackhole.c  canvas_bh_compress.c  canvas_branch.c  canvas_gpu_stub.c  canvasos_launcher.c  engine.c  fd_canvas_bridge.c  lane_exec.c  pixelcode.c  scheduler.c  shell.c  tervas.c  vm_runtime_bridge.c  whitehole.c
engine/tests/: test_blackhole.c  test_determinism.c  test_dk.c  test_engine.c  test_framework.h  test_gate.c  test_gpu.c  test_main.c  test_rulecell.c  test_scheduler.c  test_shell.c  test_whitehole.c
shell/: App.tsx  app.json  package.json  tsconfig.json
shell/app/: _layout.tsx
shell/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx  workspace.tsx
shell/lib/: engine-api.ts
spatial/c_native/: Makefile  cvp1.c  cvp1.h  main_cvp1.c
spatial/test_data/: canvas.sj3f
specs/: SPEC_1_ENGINE_BRIDGE.md  SPEC_2_UI_SHELL.md
(+23 files in other folders)
